base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    tier: web
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    tier: app
